--- a/index.html
+++ b/index.html
@@ -3,5 +3,13 @@
 <head>
 </head>
 <body>
-hello world
+<h1>
+    2024 United Kingdom General Election Party Manifestos
+</h1>
+<h2>A manifesto is a publication issued by a political party before a General Election. It contains the set of policies that the party stands for and would wish to implement if elected to govern.</h2>
+<p>Find out what you could vote for, from all the major political parties.</p>
+<div>
+    <img src="/images/labour.png"/>Labour
+</div>
+<h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
 </body>
