--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     2024 United Kingdom General Election Party Manifestos
 </h1>
 <h2>A manifesto is a publication issued by a political party before a General Election. It contains the set of policies that the party stands for and would wish to implement if elected to govern.</h2>
-<p>Find out what you could vote for, from all the major political parties.</p>
+<p>Find out what you are voting for, from all the major political parties.</p>
 <div>
-    <img src="/images/labour.png"/>Labour
+    <img src="/manifestos/images/conservatives.png"/>Conservatives
+</div>
+<div>
+    <img src="/manifestos/images/green_party.png"/>Green Party
+</div>
+<div>
+    <img src="/manifestos/images/labour.png"/>Labour
+</div>
+<div>
+    <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
+</div>
+<div>
+    <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
+</div>
+<div>
+    <img src="/manifestos/images/reform.png"/>Reform
 </div>
 <h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
 </body>
