--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Manifestos.uk - 2024 United Kingdom General Election Manifestos</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <h1>
-    2024 United Kingdom General Election Party Manifestos
+    2024 United Kingdom General Election Manifestos
 </h1>
 <h2>A manifesto is a publication issued by a political party before a General Election. It contains the set of policies that the party stands for and would wish to implement if elected to govern.</h2>
 <p>Find out what you are voting for, from all the major political parties.</p>
-<div>
-    <img src="/manifestos/images/conservatives.png"/>Conservatives
-</div>
-<div>
-    <img src="/manifestos/images/green_party.png"/>Green Party
-</div>
-<div>
-    <img src="/manifestos/images/labour.png"/>Labour
-</div>
-<div>
-    <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
-</div>
-<div>
-    <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
-</div>
-<div>
-    <img src="/manifestos/images/reform.png"/>Reform
+<div class="grid-container">
+    <div class="grid-item">
+        <img src="/manifestos/images/conservatives.png"/>Conservatives
+    </div>
+    <div class="grid-item">
+        <img src="/manifestos/images/green_party.png"/>Green Party
+    </div>
+    <div class="grid-item">
+        <img src="/manifestos/images/labour.png"/>Labour
+    </div>
+    <div class="grid-item">
+        <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
+    </div>
+    <div class="grid-item">
+        <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
+    </div>
+    <div class="grid-item">
+        <img src="/manifestos/images/reform.png"/>Reform
+    </div>
 </div>
 <h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
 </body>
+</html>
