--- a/index.html
+++ b/index.html
@@ -17,22 +17,34 @@
 <p>Find out what you are voting for, from all the major political parties.</p>
 <div class="grid-container">
     <div class="grid-item">
-        <img src="/manifestos/images/conservatives.png"/>Conservatives
+        <a class="grid-item" href="/manifestos/docs/conservatives.pdf" download>
+            <img src="/manifestos/images/conservatives.png"/>Conservatives
+        </a>
     </div>
     <div class="grid-item">
-        <img src="/manifestos/images/green_party.png"/>Green Party
+        <a class="grid-item" href="/manifestos/docs/green_party.pdf" download>
+            <img src="/manifestos/images/green_party.png"/>Green Party
+        </a>
     </div>
     <div class="grid-item">
-        <img src="/manifestos/images/labour.png"/>Labour
+        <a class="grid-item" href="/manifestos/docs/labour.pdf" download>
+            <img src="/manifestos/images/labour.png"/>Labour
+        </a>
     </div>
     <div class="grid-item">
-        <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
+        <a class="grid-item" href="/manifestos/docs/liberal_democrats.pdf" download>
+            <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
+        </a>
     </div>
     <div class="grid-item">
-        <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
+        <a class="grid-item" href="/manifestos/docs/plaid_cymru.pdf" download>
+            <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
+        </a>
     </div>
     <div class="grid-item">
-        <img src="/manifestos/images/reform.png"/>Reform
+        <a class="grid-item" href="/manifestos/docs/reform.pdf" download>
+            <img src="/manifestos/images/reform.png"/>Reform
+        </a>
     </div>
 </div>
 <h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
