--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 <p>Find out what you are voting for, from all the major political parties.</p>
 <div class="grid-container">
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/conservatives.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/conservatives.pdf">
             <img src="/manifestos/images/conservatives.png"/>Conservatives
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/green_party.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/green_party.pdf">
             <img src="/manifestos/images/green_party.png"/>Green Party
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/labour.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/labour.pdf">
             <img src="/manifestos/images/labour.png"/>Labour
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/liberal_democrats.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/liberal_democrats.pdf">
             <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/plaid_cymru.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/plaid_cymru.pdf">
             <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/reform.pdf" download>
+        <a class="grid-item" href="/manifestos/docs/reform.pdf">
             <img src="/manifestos/images/reform.png"/>Reform
         </a>
     </div>
