--- a/index.html
+++ b/index.html
@@ -15,38 +15,39 @@
 </h1>
 <h2>A manifesto is a publication issued by a political party before a General Election. It contains the set of policies that the party stands for and would wish to implement if elected to govern.</h2>
 <p>Find out what you are voting for, from all the major political parties.</p>
+<h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
+
 <div class="grid-container">
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/conservatives.pdf">
-            <img src="/manifestos/images/conservatives.png"/>Conservatives
+        <a href="/manifestos/docs/conservatives.pdf">
+            <img src="/manifestos/images/conservatives.png"/>
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/green_party.pdf">
-            <img src="/manifestos/images/green_party.png"/>Green Party
+        <a href="/manifestos/docs/green_party.pdf">
+            <img src="/manifestos/images/green_party.png"/>
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/labour.pdf">
-            <img src="/manifestos/images/labour.png"/>Labour
+        <a href="/manifestos/docs/labour.pdf">
+            <img src="/manifestos/images/labour.png"/>
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/liberal_democrats.pdf">
-            <img src="/manifestos/images/liberal_democrats.png"/>Liberal Democrats
+        <a href="/manifestos/docs/liberal_democrats.pdf">
+            <img src="/manifestos/images/liberal_democrats.png"/>
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/plaid_cymru.pdf">
-            <img src="/manifestos/images/plaid_cymru.png"/>Plaid Cymru
+        <a href="/manifestos/docs/plaid_cymru.pdf">
+            <img src="/manifestos/images/plaid_cymru.png"/>
         </a>
     </div>
     <div class="grid-item">
-        <a class="grid-item" href="/manifestos/docs/reform.pdf">
-            <img src="/manifestos/images/reform.png"/>Reform
+        <a href="/manifestos/docs/reform.pdf">
+            <img src="/manifestos/images/reform.png"/>
         </a>
     </div>
 </div>
-<h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Compare manifestos using AI</a></h3>
 </body>
 </html>
