--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             <img src="/manifestos/images/reform.png"/>
         </a>
     </div>
+    <div class="grid-item">
+        <a href="https://www.snp.org/policies">
+            <img src="/manifestos/images/snp.png"/>
+        </a>
+    </div>
 </div>
 </body>
 </html>
