--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </h1>
 <h2>A manifesto is a publication issued by a political party before a General Election. It contains the set of policies that the party stands for and would wish to implement if elected to govern.</h2>
 <p>Find out what you are voting for, from all the major political parties.</p>
-<h3><a href="https://chatgpt.com/g/g-FCfxWVill-manifestos">Question and compare manifestos using AI</a></h3>
+
+<a href="https://chatgpt.com/g/g-FCfxWVill-manifestos" class="button">Question and compare manifestos using AI</a>
+
+<h3>Read the full manifestos below:</h3>
 
 <div class="grid-container">
     <div class="grid-item">
