--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <img class="demo" src="/manifestos/images/demo.gif"/>
 
-<a href="https://chatgpt.com/g/g-FCfxWVill-manifestos" class="button">Question and compare manifestos using AI</a>
+<a href="https://chatgpt.com/g/g-FCfxWVill-manifestos" class="button">Question and compare manifestos using AI 👉</a>
 
 <h3>Read the full manifestos below:</h3>
 
