--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manifestos.uk - 2024 United Kingdom General Election Manifestos</title>
-    <meta name="description" content="Manifestos.uk allows you to quiz and compare 2024 UK General Election manifestos using AI">
+    <title>Manifestos.info - 2024 UK General Election Manifestos</title>
+    <meta name="description" content="Manifestos.info allows you to quiz and compare 2024 UK General Election manifestos using AI">
     <link rel="icon" type="image/png" sizes="16x16" href="images/ballot_icon_16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/ballot_icon_32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="images/ballot_icon_48x48.png">
@@ -69,5 +69,7 @@
         </a>
     </div>
 </div>
+
+<div class="footnote">Made by <a href="https://jonathanfinerty.com">Jon Finerty</a></div>
 </body>
 </html>
